# docker-example-api/src/main/api/openapi.yaml
@@ -2,7 +2,8 @@ openapi: 3.0.0
 info:
   title: Product API
   version: @VERSION@
-servers: []
+servers:
+  - url: https://localhost/v1
 paths:
   /products:
     get:
@@ -29,7 +30,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/product'
+              $ref: '#/components/schemas/productInput'
         required: true
   /products/{productId}:
     get:
@@ -54,7 +55,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/product'
+              $ref: '#/components/schemas/productInput'
         required: true
     delete:
       responses:
@@ -68,7 +69,7 @@ paths:
       schema:
         type: integer
         format: int64
-  /products/{productId}/price:
+  /orders:
     get:
       responses:
         200:
@@ -76,17 +77,80 @@ paths:
           content:
             application/json:
               schema:
-                type: number
-      operationId: GetProductByProductIdPrice
+                type: array
+                items:
+                  $ref: '#/components/schemas/order'
+      operationId: GetOrders
+    post:
+      responses:
+        201:
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/order'
+      operationId: PostOrder
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/orderInput'
+        required: true
+  /orders/{orderId}:
+    get:
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/order'
+      operationId: GetOrderByOrderId
+    put:
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/order'
+      operationId: PutOrderByOrderId
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/orderInput'
+        required: true
+    delete:
+      responses:
+        200:
+          description: ''
+      operationId: DeleteOrderByOrderId
     parameters:
-    - name: productId
+    - name: orderId
       in: path
       required: true
       schema:
-        type: integer
-        format: int64
+        type: string
 components:
   schemas:
+    productInput:
+      type: object
+      properties:
+        version:
+          type: integer
+          format: int64
+        name:
+          type: string
+        price:
+          type: number
+        releaseDate:
+          type: string
+          format: date
+      required:
+      - name
+      - price
+      - releaseDate
     product:
       type: object
       properties:
@@ -110,9 +174,78 @@ components:
           type: string
           format: date-time
       required:
+      - id
+      - version
       - name
       - price
       - releaseDate
+      - createdOn
+      - lastModified
+    order:
+      type: object
+      properties:
+        id:
+          type: string
+        version:
+          type: integer
+          format: int64
+        price:
+          type: number
+          format: double
+        items:
+          type: array
+          items:
+            type: object
+            properties:
+              quantity:
+                type: integer
+                format: int32
+              productId:
+                type: integer
+                format: int64
+              price:
+                type: number
+                format: double
+            required:
+              - quantity
+              - productId
+              - price
+        createdOn:
+          type: string
+          format: date-time
+        lastModified:
+          type: string
+          format: date-time
+      required:
+      - id
+      - version
+      - price
+      - items
+      - createdOn
+      - lastModified
+    orderInput:
+      type: object
+      properties:
+        version:
+          type: integer
+          format: int64
+        items:
+          type: array
+          items:
+            type: object
+            properties:
+              quantity:
+                type: integer
+                format: int32
+              productId:
+                type: integer
+                format: int64
+            required:
+              - quantity
+              - productId
+      required:
+      - version
+      - items
   responses: {}
   parameters: {}
   examples: {}
